# bambam

./: .gitignore  Cargo.toml  LICENSE  README.md  bambam_proto.py  script.py
other/: mindmap.emmx
py/: out.bam.bai
py/dna_data/: classified.bam.bai
src/: data_structures.rs  distance.rs  filter.rs  filter_new.rs  index.rs  io.rs  kmer.rs  lib.rs  load.rs  main.rs  parse.rs  samtools_filter.rs  types.rs
src/filter/: coverage.rs  engine.rs  grouped.rs  mod.rs  primary.rs  utils.rs
