[package]
name = "bambam"
version = "0.1.0"
edition = "2024"
authors = ["Patrik Juica <patrik.lev.jurica@gmail.com>"]
description = "A CLI tool to filter long-read BAM files using sequence-specific rare k-mers."

[dependencies]
# CLI Argument Parsing
clap = { version = "4.4", features = ["derive"] }

# bioinformatics I/O
noodles = { version = "0.109.0", features = ["bam", "sam", "fasta", "bgzf"] }

# error handling
anyhow = "1.0"

rustc-hash = "1.1"